<resources>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="account_button_login_text">点击登录</string>
    <string name="acquire_bamboo">立即获取</string>
    <string name="acquire_bamboo_by_others">您已经领过竹子啦！</string>
    <string name="acquire_bamboo_net_error">获取验证码失败，请稍后重试。</string>
    <string name="acquire_bamboo_num">获得 %s 个竹子</string>
    <string name="acquire_bamboo_over">今天的竹子已经全领光啦！</string>
    <string name="acquire_bamboo_time">需要观看 %s 分钟才能领取竹子</string>
    <string name="acquire_bamboo_verify_error">验证码验证失败，请重试！</string>
    <string name="action_settings">settings</string>
    <string name="app_name">熊猫TV</string>
    <string name="buffering">缓冲中...</string>
    <string name="button_cancel">取消</string>
    <string name="button_continue">继续</string>
    <string name="change_avatar_fail">更改头像失败</string>
    <string name="chat_send_empty_message">消息不能为空</string>
    <string name="crop_portrait_title">截取头像</string>
    <string name="danmu_flag_close">关闭弹幕</string>
    <string name="danmu_flag_open">打开弹幕</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="fail_for_network_busy">服务端正忙，请稍后再试</string>
    <string name="fail_for_network_error">网络异常，操作失败</string>
    <string name="follow_delete_query">确定不再关注此人？</string>
    <string name="force_update_downloading_text">正在更新，请稍等...</string>
    <string name="force_update_message_text">当前版本太低，无法与校长交流</string>
    <string name="fragment_column_live">栏目</string>
    <string name="fragment_home">首页</string>
    <string name="fragment_live">直播</string>
    <string name="fragment_my">我的</string>
    <string name="get_auth_notify_failed">获取验证码失败</string>
    <string name="get_auth_notify_ok">验证码已发送到手机，请查收</string>
    <string name="get_image_notify_failed">选择图片文件出错</string>
    <string name="give_bamboo">赠送</string>
    <string name="give_bamboo_num">赠送数量：</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_login_activity_password">密码</string>
    <string name="hint_login_activity_username">账号（请输入您的手机号）</string>
    <string name="hint_register_activity_ack_password">密码确认（再次输入密码）</string>
    <string name="hint_register_activity_mobile">请输入您的手机号</string>
    <string name="hint_register_activity_mobile_auth">请输入您收到的验证码</string>
    <string name="hint_register_activity_nickname">昵称（4-20位中英文、数字、下划线组成）</string>
    <string name="hint_register_activity_password">密码（6-20位字母，符号、数字、区分大小写）</string>
    <string name="hint_register_activity_uasename">账号（6-16位字母开头，字母数字、下划线）</string>
    <string name="ijkplayer_dummy" />
    <string name="input_hint">说点什么吧！</string>
    <string name="input_hint_full_screen">输入发送弹幕...</string>
    <string name="input_send">发送</string>
    <string name="live_notify_chat_login">登录后才可发言</string>
    <string name="live_notify_please_login">请先登录</string>
    <string name="live_status_failure">连接失败，网络断开。单击重新刷新</string>
    <string name="live_status_info_failure">获取直播信息失败。单击重新刷新</string>
    <string name="live_status_loading">直播视频连接中...</string>
    <string name="live_status_waiting">主播正在赶来的路上</string>
    <string name="login_button_login_text">登录</string>
    <string name="login_button_logining_text">正在登录...</string>
    <string name="login_button_logout_text">退出登录</string>
    <string name="login_button_logouting_text">正在退出...</string>
    <string name="login_notify_check_empty_text">用户名和密码不能为空</string>
    <string name="login_notify_failed">登录失败</string>
    <string name="login_user_name_labal">用户名：</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="modify_button_ok_nickname">确认</string>
    <string name="modify_image_notify_failed">修改用户头像失败</string>
    <string name="modify_nickname_notify_failed">修改用户昵称失败</string>
    <string name="my_bamboo">我的竹子：</string>
    <string name="network_change_message_text">当前非WIFI网络，继续观看会消耗手机流量。</string>
    <string name="notify_send_message_fail">发送聊天信息失败</string>
    <string name="notify_send_message_refuse">你已经被禁止发言</string>
    <string name="ok">确定</string>
    <string name="register_button_getauth_text">获取验证码</string>
    <string name="register_button_getingauth_text">重新获取</string>
    <string name="register_button_register_text">注册</string>
    <string name="register_button_registering_text">正在注册...</string>
    <string name="register_mobile_input_digts">0123456789</string>
    <string name="register_mobile_notify_auth_error">验证码输入错误</string>
    <string name="register_notify_check_alike_ack_password">密码不一致</string>
    <string name="register_notify_check_empty_ack_password">请再次确认密码</string>
    <string name="register_notify_check_empty_mobile">手机号码不能为空</string>
    <string name="register_notify_check_empty_nickname">昵称不能为空</string>
    <string name="register_notify_check_empty_password">密码不能为空</string>
    <string name="register_notify_check_empty_username">用户名不能为空</string>
    <string name="register_notify_check_header_username">用户名必须以字母开头</string>
    <string name="register_notify_check_mobile">请填写正确的手机号码</string>
    <string name="register_notify_check_size_max_password">密码不能超过20位</string>
    <string name="register_notify_check_size_min_password">密码长度太短，至少6位以上</string>
    <string name="register_notify_check_size_mobile">手机号码必须11位</string>
    <string name="register_notify_check_size_nickname">昵称由4-20中英文、数字、下划线组成</string>
    <string name="register_notify_check_size_username">用户名6-16位</string>
    <string name="register_notify_check_verify_nickname">昵称不合法</string>
    <string name="register_notify_failed">注册失败</string>
    <string name="register_notify_nickname_exist">昵称已经存在</string>
    <string name="register_notify_nickname_failed">昵称不可用</string>
    <string name="register_password_input_digts">"!@#$%^&amp;*()-=_+/;:',.&lt;>`~[]{}0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ"</string>
    <string name="register_user_input_digts">_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="room_admin">房管</string>
    <string name="room_headermaster">校长</string>
    <string name="room_owner">主播</string>
    <string name="room_super_admin">超管</string>
    <string name="search_hint_tips">搜索房间ID、主播名称</string>
    <string name="search_history">搜索历史</string>
    <string name="search_history_clear_all">是否清除所有搜索历史</string>
    <string name="search_history_clear_no">取消</string>
    <string name="search_history_clear_yes">清除</string>
    <string name="send_bamboo_default">给主播赠送了竹子</string>
    <string name="send_num_bamboo">赠送给主播 %1$s 个竹子</string>
    <string name="share">分享</string>
    <string name="share_app_not_install">%1$s应用未安装</string>
    <string name="share_to_email_subject">分享</string>
    <string name="share_to_message_task_title">我也想去熊猫TV当主播了，直播睡觉都能月入百万！</string>
    <string name="share_to_message_title">我正在熊猫TV观看直播“%1$s”，欢迎大家来围观。</string>
    <string name="share_to_name_qq">QQ</string>
    <string name="share_to_name_qqzone">QQ空间</string>
    <string name="share_to_name_weibo">新浪微博</string>
    <string name="share_to_name_weixin_friend">微信</string>
    <string name="share_to_name_weixin_timeline">朋友圈</string>
    <string name="share_to_qq_failed">分享到qq失败：</string>
    <string name="sort">Sort</string>
    <string name="tb_munion_tip_download_prefix">正在下载:</string>
    <string name="text_version_pre">版本号：</string>
    <string name="title_activity_Login_activity">登录</string>
    <string name="title_activity_about_activity">关于</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="title_activity_follow">FollowActivity</string>
    <string name="title_activity_getaccount_activity">忘记密码</string>
    <string name="title_activity_login_getaccount">忘记密码?</string>
    <string name="title_activity_main_fragment">熊猫TV</string>
    <string name="title_activity_register_activity">注册</string>
    <string name="title_activity_resgister">立刻注册></string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_task_attention">我的关注</string>
    <string name="title_activity_task_list">我的任务</string>
    <string name="title_activity_task_modify_nick">修改昵称</string>
    <string name="title_activity_userinfo_activity">个人资料</string>
    <string name="title_activity_userinfo_email">邮箱</string>
    <string name="title_activity_userinfo_header">头像</string>
    <string name="title_activity_userinfo_mobile">手机号</string>
    <string name="title_activity_userinfo_nickname">昵称</string>
    <string name="title_activity_userinfo_qq">QQ号</string>
    <string name="title_activity_userinfo_zhuzi">我的竹子</string>
    <string name="title_activity_welcome">熊猫TV</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_info_exist">正在下载中</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_common_download_finish">下载完成，请点击安装</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_icon">icon</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>
    <string name="umeng_common_pause_notification_prefix">暂停:</string>
    <string name="umeng_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="umeng_common_start_download_notification">正在下载应用</string>
    <string name="umeng_common_start_patch_notification">正在更新安装包</string>
    <string name="umeng_fb_back">返回</string>
    <string name="umeng_fb_change_contact_title">更改联系信息</string>
    <string name="umeng_fb_contact_email">邮箱</string>
    <string name="umeng_fb_contact_info">联系方式</string>
    <string name="umeng_fb_contact_info_hint">QQ, 电话等我们能联系您的联系方式</string>
    <string name="umeng_fb_contact_key_email">email</string>
    <string name="umeng_fb_contact_key_other">plain</string>
    <string name="umeng_fb_contact_key_phone">phone</string>
    <string name="umeng_fb_contact_key_qq">qq</string>
    <string name="umeng_fb_contact_other">其他</string>
    <string name="umeng_fb_contact_phone">手机</string>
    <string name="umeng_fb_contact_qq">QQ</string>
    <string name="umeng_fb_contact_save">保存</string>
    <string name="umeng_fb_count_down">限时倒数</string>
    <string name="umeng_fb_feedback">用着不爽么?来吐槽吧～～～</string>
    <string name="update_now">立即升级</string>
    <string name="video_chaoqing">超清</string>
    <string name="video_gaoqing">高清</string>
    <string name="video_puqing">普清</string>
</resources>