<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:name="com.panda.videoliveplatform.activity.MainFragmentFragment" android:id="@id/mainlayout" android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/main_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" layout="@layout/fragment_title" />
    <LinearLayout android:orientation="vertical" android:id="@id/main_bottom" android:background="@drawable/bottom_bar_bg" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false">
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="2.8" />
            <RelativeLayout android:id="@id/main_home" android:layout_width="80.0dip" android:layout_height="50.0dip">
                <TextView android:textSize="12.0sp" android:textColor="@color/webview_bottom_grey" android:id="@id/main_home_btn" android:paddingTop="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_home" android:drawableTop="@drawable/home_pressed" android:drawablePadding="1.5dip" android:layout_centerInParent="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <RelativeLayout android:id="@id/main_column_live" android:layout_width="80.0dip" android:layout_height="50.0dip">
                <TextView android:textSize="12.0sp" android:textColor="@color/webview_bottom_grey" android:id="@id/main_column_live_btn" android:paddingTop="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_column_live" android:drawableTop="@drawable/column" android:drawablePadding="1.5dip" android:layout_centerInParent="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <RelativeLayout android:id="@id/main_live" android:layout_width="80.0dip" android:layout_height="50.0dip">
                <TextView android:textSize="12.0sp" android:textColor="@color/webview_bottom_grey" android:id="@id/main_live_btn" android:paddingTop="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_live" android:drawableTop="@drawable/live" android:drawablePadding="1.5dip" android:layout_centerInParent="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <RelativeLayout android:id="@id/main_user" android:layout_width="80.0dip" android:layout_height="50.0dip">
                <TextView android:textSize="12.0sp" android:textColor="@color/webview_bottom_grey" android:id="@id/main_user_btn" android:paddingTop="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_my" android:drawableTop="@drawable/user" android:drawablePadding="1.5dip" android:layout_centerInParent="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="2.8" />
        </LinearLayout>
    </LinearLayout>
    <android.support.v4.view.ViewPager android:id="@id/viewpager" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/main_bottom" android:layout_below="@id/main_title" />
</RelativeLayout>