<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/nowifi_back_ground" android:layout_width="280.0dip" android:layout_height="180.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/layout_force_update_notify" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="90.0dip">
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:textSize="13.0dip" android:textColor="#ff2b2b2b" android:gravity="center_horizontal" android:id="@id/textview_force_update_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/force_update_message_text" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="89.5dip">
                <RelativeLayout android:layout_width="110.0dip" android:layout_height="35.0dip">
                    <Button android:textSize="13.0dip" android:textColor="@color/follow_btnyes_text_color" android:gravity="center" android:id="@id/button_update_now" android:background="@drawable/btn_already_follow" android:layout_width="110.0dip" android:layout_height="35.0dip" android:text="@string/update_now" />
                    <Button android:textSize="13.0dip" android:textColor="@color/follow_btnyes_text_color" android:gravity="center" android:id="@id/button_update_install" android:background="@drawable/btn_already_follow" android:visibility="gone" android:layout_width="110.0dip" android:layout_height="35.0dip" android:text="@string/update_now" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layout_force_update_downloading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="13.0dip" android:textColor="#ff2b2b2b" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/force_update_downloading_text" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>