<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListView android:scrollbarStyle="outsideOverlay" android:id="@id/messageListview" android:background="#fff6f6f6" android:paddingLeft="15.0dip" android:paddingTop="6.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@android:color/transparent" android:cacheColorHint="#00000000" android:divider="@null" android:layout_weight="1.0" />
    <com.panda.videoliveplatform.chat.MessageInputToolBox android:id="@id/messageInputToolBox" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="vertical" android:id="@id/gift_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="55.0dip">
                <TextView android:textSize="13.0dip" android:textColor="@color/bamboo_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_bamboo" />
                <ImageView android:background="@drawable/ico_bamboon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" />
                <TextView android:textSize="13.0dip" android:textColor="@color/bamboo_num" android:id="@id/my_bamboo_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="0" />
                <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <TextView android:textSize="13.0dip" android:textColor="@color/bamboo_title" android:gravity="center" android:id="@id/acquire_bamboo_btn" android:background="@drawable/acquire_bamboo_btn" android:padding="0.0dip" android:clickable="true" android:layout_width="64.0dip" android:layout_height="25.0dip" android:text="@string/acquire_bamboo" />
            </LinearLayout>
            <TextView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="55.0dip">
                <TextView android:textSize="13.0dip" android:textColor="@color/bamboo_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/give_bamboo_num" />
                <ImageView android:background="@drawable/ico_bamboon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" />
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/select_bamboo_comb" android:background="@drawable/select_bamboo_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="25.0dip" android:layout_marginLeft="8.0dip">
                    <TextView android:textSize="12.0dip" android:textColor="@color/bamboo_num" android:id="@id/give_bamboo_num" android:paddingLeft="11.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="100" />
                    <ImageView android:background="@drawable/ico_arrows" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="8.0dip" />
                </LinearLayout>
                <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <TextView android:textSize="13.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/give_bamboo_btn" android:background="@drawable/give_bamboo_btn" android:padding="0.0dip" android:clickable="true" android:layout_width="64.0dip" android:layout_height="25.0dip" android:text="@string/give_bamboo" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>